merge pe instanta ec2 ubuntu